# soc_real_time_renderer

./: CMakeLists.txt  LICENSE  README.md  imgui.ini  vcpkg.json
assets/old_sponza/: old_sponza.gltf
src/: application.cpp  application.hpp  context.cpp  context.hpp  main.cpp  pch.hpp
src/ecs/: components.cpp  components.hpp  entity.cpp  entity.hpp  scene.cpp  scene.hpp  uuid.cpp  uuid.hpp
src/graphics/: camera.cpp  camera.hpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  shared.inl  texture.cpp  texture.hpp  window.cpp  window.hpp
src/graphics/shaders/: generate_hiz.glsl
src/graphics/tasks/: bloom_downsample.inl  bloom_upsample.inl  cloud_rendering.inl  composition.inl  depth_of_field.inl  depth_prepass.inl  display_attachment.inl  draw_terrain.inl  g_buffer_generation.inl  generate_luminance_histogram.inl  generate_max_hiz.inl  generate_min_hiz.inl  height_to_normal.inl  resolve_luminance_histogram.inl  screen_space_reflection.inl  ssao_blur.inl  ssao_generation.inl  sun_shadow_draw.inl  sun_shadow_draw_terrain.inl  temporal_antialiasing.inl  tone_mapping.inl
src/ui/: ui.cpp  ui.hpp
src/ui/editor/: scene_hiearchy_panel.cpp  scene_hiearchy_panel.hpp
src/utils/: file_io.cpp  file_io.hpp  gpu_metric.cpp  gpu_metric.hpp  scrolling_buffer.hpp
